--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -105,10 +105,10 @@ form .mini {width:650px;}
 
 #intro{top:100px; right: 0;position: absolute;width: 400px;}
 
-h1,h3,dl dt,.h3,h5,.h5{font-weight:700}
+h1,h3,dl dt,.h3,h5,.h5{font-weight:700; display: block;}
 h2,.h2,h4,blockquote.simple,.h4,h6,.h6{font-weight:normal}
 .h3,.h4,#resources-research ul.reports li,.h5,.h6{text-shadow:none}
-h1,blockquote.big-bold,.h1,blockquote.big,#resources-research dl.data dt,#about-brand-assets .get-everything{font-size:30px;letter-spacing:-1px;margin-top:10px}
+h1,blockquote.big-bold,.h1,blockquote.big,#resources-research dl.data dt,#about-brand-assets .get-everything{font-size:30px;letter-spacing:-1px;margin:10px 0}
 h2,.h2{font-size:20px;font-weight:bold}
 h3,dl dt,.h3,h4,blockquote.simple,.h4,#resources-research ul.reports li{font-size:15px}
 h5,.h5,h6,.h6{font-size:13px;line-height:18px}
@@ -127,13 +127,11 @@ h6{padding:0 10px;margin:0;display: inline;height:27px;line-height:27px;width:28
 
 .menu_deroulant{position: absolute; top:20px; right:20px}
 
-.onglets_tutos {border-bottom: 1px solid #00aff0;font-size: 93%;line-height: normal;overflow: hidden;margin-bottom: 15px;margin-top: 15px;}
+.onglets_tutos {border-bottom: 1px solid #00aff0;overflow: hidden;margin:10px 0; width: 680px;}
 .onglets_tutos ul {margin: 0;padding: 10px 10px 0;list-style: none;}
 .onglets_tutos li {float: left;background: url('/img/onglet_cours.png') no-repeat left -28px;margin: 0 3px 0 0;width:180px;padding: 0 0 0 20px;}
 .onglets_tutos .selected {background-position: left 0;}
-
 .selected a {color: white;padding-bottom: 5px;background-position: right 0;border-bottom: none;}
-
 .onglets_tutos a {float: left;display: block;background: url('/img/onglet_cours.png') no-repeat right -56px;
 padding: 5px 0 0 0px;text-decoration: none;font-weight: bold;color: #fff;text-align:center;}
 
@@ -171,6 +169,7 @@ label {cursor: pointer;}
 .sous-titre{background-position: left; background-repeat: no-repeat; padding: 0px; margin: 5px 0;margin-left: 15px; margin-bottom: 10px; text-transform: uppercase; color: #999;font-size: 11px;}
 .puce{background-image: url('/img/fleche.png');}
 
+.center{text-align: center !important;}
 .uppercase  {text-transform: uppercase;}
 .capitalize {text-transform: capitalize;}
 .bold       {font-weight: bold;}
@@ -180,7 +179,7 @@ label {cursor: pointer;}
 .orange {color:#ffc000}
 .vert {color:#66B700}
 
-.bulle {background-position: left; background-repeat: no-repeat; padding: 4px 0 4px 40px; margin: 10px 0; font-size: 14px;-webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;}
+.bulle {background-position: left; background-repeat: no-repeat; padding: 4px 0 4px 40px; margin: 10px 0; font-size: 14px; display:inline-block; -webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;}
 .information{background-image: url('/img/info.png') ; color: #00ccff; }
 .success{color: #00c806; border: 1px solid #00c806; background-color: #d5ff95; font-weight: bold; font-size: 15px; padding: 5px 15px;}
 .error{ color: red; border: 1px solid red; background-color: #ffacac; font-weight: bold; font-size: 15px; padding: 5px 15px;}
@@ -193,17 +192,19 @@ label {cursor: pointer;}
 .manager tr td {padding: 6px; text-align: left; vertical-align: top; border-bottom: 1px solid #DDD; }
 
 
-#breadcrumbs{border-bottom: 1px dotted #999; width: 70%; padding: 5px; margin-bottom: 10px; font-size: 14px; color: #00ccff; }
-#breadcrumbs a {text-decoration: none;}
+#breadcrumbs{border-bottom: 1px dotted #999; width: 70%; padding: 5px; margin-bottom: 10px; font-size: 14px; font-size: 0.8em;}
+#breadcrumbs a {text-decoration: none; color: #2677C9;}
 
-.alignLeft{ float:left; margin-right: 10px; }
+.alignLeft{ float:left; margin-right: 10px;}
 .alignRight{ float:right; margin-left: 10px; }
 .alignCenter{ display:block; margin:0 auto; }
 
 .contenu{margin: 10px;}
 .cours.plan {margin:10px 0;}
 
-.sidebar {padding:10px ; float:right; margin-top: 50px; margin-left: 10px; margin-right: 10px; width:250px; background-color: red; height: 200px;}
+.sidebar {padding:10px ; float:right;  margin: 0; width:250px; background-color: red; height: 200px;}
+.subsidebar {padding:0 10px ; float:right;  margin: 0; margin-top: 6px; margin-bottom: 10px; width:250px; border-style:inset; border-top:1px solid #9a9a9a;}
+/*.sidebar {padding:10px ; position:absolute; right:15px; top:60px; width:250px; background-color: red; height: 200px;}*/
 
 .alert-message {
   position: relative;
@@ -267,7 +268,14 @@ label {cursor: pointer;}
     padding:0px; 
 } 
 
-.tagspace{border:1px solid #000; width: 300px; padding:10px;}
+.tagspace{border:1px solid #000; width: 249px; padding:10px; position: absolute; right: 14px; top: 10px;}
 #tags{ margin:10px 0;}
 input[type="text"] {padding: 10px;border: 1px solid #DDD;border-top: 1px solid #CCC;
 background: white;font-weight: 300;color: #65645A;-webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;}
+
+.typeset{margin:0 !important; padding:0 !important; color:#2d2d2d;}
+div.typeset{display: inline-block}
+span.typeset{display: inline !important;}
+
+.voirQuestion{margin: 15px 0;
+line-height: 1em;font-size: 15px;font-weight: 700; float:none;}
