--- a/app/webroot/css/messagerie.css
+++ b/app/webroot/css/messagerie.css
@@ -1,5 +1,5 @@
 /* Boîte de réception */
-table.boite_reception { padding:2px; border-collapse: collapse; margin: 15px 0;width: 675px}
+table.boite_reception { padding:2px; border-collapse: collapse; margin: 15px;width: 645px;}
 table.boite_reception tr {margin:2px;border-top: 1px solid #ccc;}
 table.boite_reception td {vertical-align:middle;}
 .boite_reception .avatar{padding-top: 15px; width:38px; height:56px;}
@@ -8,14 +8,14 @@ table.boite_reception td {vertical-align:middle;}
 .boite_reception .contenu.non-lu{font-weight:bolder; font-size: 13px;}
 
 /* Menu de la messagerie */
-.messagerie.menu{}
+.messagerie.menu{ }
 .messagerie.menu ul{list-style: none;}
 .messagerie.menu ul li{display:inline-block; padding: 10px 0 10px 0}
 .messagerie.menu ul li a{padding: 20px 13px 10px 12px; margin:0 0 0 6px; text-decoration: none; color:#000;font-weight: bold}
 .messagerie.menu ul li a:hover, .messagerie.menu ul li a.active{color :#ffcc00; background-image: url('/img/fleche3.png'); background-repeat: no-repeat; background-position: 0% 70%;padding-left: 15px;}
 
 /* Voir un message */
-.messagerie {}
+.messagerie {margin:10px;}
 .messagerie.voir {background-color: #fff; padding: 20px; text-align: justify; width:645px; display: block; position: absolute; top:50px;}
 .messagerie.avatar {float: left;}
 .messagerie.expediteur {display: inline;}
