--- a/app/webroot/js/tiny_mce/plugins/inlinepopups/skins/clearlooks2/window.css
+++ b/app/webroot/js/tiny_mce/plugins/inlinepopups/skins/clearlooks2/window.css
@@ -6,35 +6,35 @@
 /* General */
 .clearlooks2 {position:absolute; direction:ltr}
 .clearlooks2 .mceWrapper {position:static}
-.mceEventBlocker {position:fixed; left:0; top:0; background:url(img/horizontal.gif) no-repeat 0 -75px; width:100%; height:100%}
+.mceEventBlocker {position:fixed; left:0; top:0;  width:100%; height:100%}
 .clearlooks2 .mcePlaceHolder {border:1px solid #000; background:#888; top:0; left:0; opacity:0.5; -ms-filter:'alpha(opacity=50)'; filter:alpha(opacity=50)}
 .clearlooks2_modalBlocker {position:fixed; left:0; top:0; width:100%; height:100%; background:#FFF; opacity:0.6; -ms-filter:'alpha(opacity=60)'; filter:alpha(opacity=60); display:none}
 
 /* Top */
 .clearlooks2 .mceTop, .clearlooks2 .mceTop div {top:0; width:100%; height:23px}
-.clearlooks2 .mceTop .mceLeft {width:6px; background:url(img/corners.gif)}
-.clearlooks2 .mceTop .mceCenter {right:6px; width:100%; height:23px; background:url(img/horizontal.gif) 12px 0; clip:rect(auto auto auto 12px)}
-.clearlooks2 .mceTop .mceRight {right:0; width:6px; height:23px; background:url(img/corners.gif) -12px 0}
+.clearlooks2 .mceTop .mceLeft {width:6px; background-color:#2bcbff; border-radius:5px 0 0 0;}
+.clearlooks2 .mceTop .mceCenter {right:6px; width:100%; height:23px; background-color:#2bcbff; clip:rect(auto auto auto 12px)}
+.clearlooks2 .mceTop .mceRight {right:0; width:6px; height:23px; background-color:#2bcbff; border-radius:0 5px 0 0;}
 .clearlooks2 .mceTop span {width:100%; text-align:center; vertical-align:middle; line-height:23px; font-weight:bold}
-.clearlooks2 .mceFocus .mceTop .mceLeft {background:url(img/corners.gif) -6px 0}
-.clearlooks2 .mceFocus .mceTop .mceCenter {background:url(img/horizontal.gif) 0 -23px}
-.clearlooks2 .mceFocus .mceTop .mceRight {background:url(img/corners.gif) -18px 0}
+.clearlooks2 .mceFocus .mceTop .mceLeft {background-color:#2bcbff; border-radius:5px 0 0 0;}
+.clearlooks2 .mceFocus .mceTop .mceCenter {background-color:#2bcbff;}
+.clearlooks2 .mceFocus .mceTop .mceRight {background-color:#2bcbff; border-radius:0 5px 0 0;}
 .clearlooks2 .mceFocus .mceTop span {color:#FFF}
 
 /* Middle */
 .clearlooks2 .mceMiddle, .clearlooks2 .mceMiddle div {top:0}
 .clearlooks2 .mceMiddle {width:100%; height:100%; clip:rect(23px auto auto auto)}
-.clearlooks2 .mceMiddle .mceLeft {left:0; width:5px; height:100%; background:url(img/vertical.gif) -5px 0}
-.clearlooks2 .mceMiddle span {top:23px; left:5px; width:100%; height:100%; background:#FFF}
-.clearlooks2 .mceMiddle .mceRight {right:0; width:5px; height:100%; background:url(img/vertical.gif)}
+.clearlooks2 .mceMiddle .mceLeft {left:0; width:5px; height:100%; background-color: #f0f0f0; border-radius:5px; border-left: 1px solid #2bcbff;}
+.clearlooks2 .mceMiddle span {top:23px; left:5px; width:100%; height:100%; border-bottom: 1px solid #2bcbff; background:#FFF}
+.clearlooks2 .mceMiddle .mceRight {right:0; width:5px; height:100%; background-color: #f0f0f0; border-radius:5px; border-right: 1px solid #2bcbff;}
 
 /* Bottom */
-.clearlooks2 .mceBottom, .clearlooks2 .mceBottom div {height:6px}
+.clearlooks2 .mceBottom, .clearlooks2 .mceBottom div {height:6px; margin: 0; padding:0;}
 .clearlooks2 .mceBottom {left:0; bottom:0; width:100%}
 .clearlooks2 .mceBottom div {top:0}
-.clearlooks2 .mceBottom .mceLeft {left:0; width:5px; background:url(img/corners.gif) -34px -6px}
-.clearlooks2 .mceBottom .mceCenter {left:5px; width:100%; background:url(img/horizontal.gif) 0 -46px}
-.clearlooks2 .mceBottom .mceRight {right:0; width:5px; background: url(img/corners.gif) -34px 0}
+.clearlooks2 .mceBottom .mceLeft {left:0; width:5px; background-color: #f0f0f0; border-bottom:1px solid #2bcbff; border-radius:0 0 0 5px;}
+.clearlooks2 .mceBottom .mceCenter {left:5px; width:100%; height: 5px;  background-color: #f0f0f0; border-bottom:1px solid #2bcbff;}
+.clearlooks2 .mceBottom .mceRight {right:0; width:5px; background-color: #f0f0f0; border-bottom:1px solid #2bcbff; border-radius:0 0 5px 0;}
 .clearlooks2 .mceBottom span {display:none}
 .clearlooks2 .mceStatusbar .mceBottom, .clearlooks2 .mceStatusbar .mceBottom div {height:23px}
 .clearlooks2 .mceStatusbar .mceBottom .mceLeft {background:url(img/corners.gif) -29px 0}
@@ -61,7 +61,7 @@
 .clearlooks2 .mceFocus .mceMax:hover {right:37px; background:url(img/buttons.gif) -58px -32px}
 
 /* Resize */
-.clearlooks2 .mceResize {top:auto; left:auto; display:none; width:5px; height:5px; background:url(img/horizontal.gif) no-repeat 0 -75px}
+.clearlooks2 .mceResize {top:auto; left:auto; display:none; width:1px; height:1px; background-color: #2bcbff; border-radius:5px;}
 .clearlooks2 .mceResizable .mceResize {display:block}
 .clearlooks2 .mceResizable .mceMin, .clearlooks2 .mceMax {display:none}
 .clearlooks2 .mceMinimizable .mceMin {display:block}
