--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -24,6 +24,7 @@ hr{width: 50%; margin: 20px auto; }
 .FBG_resize .blog.last { width:250px; padding:20px 0 10px 0;margin-left:80px;}
 .FBG_resize .footer_border{position:absolute; top: 10px; left: -20px;box-shadow: 0 0 5px rgba(0,0,0,0.2);}
 .FBG_resize .footer_border2{position:absolute; top: 10px; right: -20px;box-shadow: 0 0 5px rgba(0,0,0,0.2);}
+.FBG_resize .citation{color:#fff;width: 900px; text-align: center;}
 
 /* footer */
 .footer {padding:2px 0 0 0; width:990px; margin:0 auto;}
