--- a/app/webroot/js/tiny_mce/plugins/inlinepopups/skins/clearlooks2/window.css
+++ b/app/webroot/js/tiny_mce/plugins/inlinepopups/skins/clearlooks2/window.css
@@ -4,32 +4,35 @@
 .clearlooks2, .clearlooks2 div, .clearlooks2 span, .clearlooks2 a {vertical-align:baseline; text-align:left; position:absolute; border:0; padding:0; margin:0; background:transparent; font-family:Arial,Verdana; font-size:11px; color:#000; text-decoration:none; font-weight:normal; width:auto; height:auto; overflow:hidden; display:block}
 
 /* General */
-.clearlooks2 {position:absolute; direction:ltr}
+.clearlooks2 {position:absolute; direction:ltr; color:#000; background-color:#fff;}
 .clearlooks2 .mceWrapper {position:static}
 .mceEventBlocker {position:fixed; left:0; top:0;  width:100%; height:100%}
 .clearlooks2 .mcePlaceHolder {border:1px solid #000; background:#888; top:0; left:0; opacity:0.5; -ms-filter:'alpha(opacity=50)'; filter:alpha(opacity=50)}
 .clearlooks2_modalBlocker {position:fixed; left:0; top:0; width:100%; height:100%; background:#FFF; opacity:0.6; -ms-filter:'alpha(opacity=60)'; filter:alpha(opacity=60); display:none}
 
 /* Top */
-.clearlooks2 .mceTop, .clearlooks2 .mceTop div {top:0; width:100%; height:23px}
-.clearlooks2 .mceTop .mceLeft {width:6px; background-color:#2bcbff; border-radius:5px 0 0 0;}
+.clearlooks2 .mceTop, .clearlooks2 .mceTop div {top:0; margin:0 0 0 -10px; width:99%; height:40px; background-color:#fff; font-size: 20px !important;
+padding: 6px 8px 15px 15px; vertical-align: middle; border-left: #888 1px solid; border-right: #888 1px solid; border-bottom: #cecece 1px solid; color:#000;}
+.clearlooks2 .mceFocus .mceTop span {font-size: 20px;}
+.clearlooks2 .mceTop span {width:100%; text-align:left; vertical-align:middle; line-height:40px; margin:0; padding: 10px}
+/*.clearlooks2 .mceTop .mceLeft {width:6px; background-color:#2bcbff; border-radius:5px 0 0 0;}
 .clearlooks2 .mceTop .mceCenter {right:6px; width:100%; height:23px; background-color:#2bcbff; clip:rect(auto auto auto 12px)}
 .clearlooks2 .mceTop .mceRight {right:0; width:6px; height:23px; background-color:#2bcbff; border-radius:0 5px 0 0;}
 .clearlooks2 .mceTop span {width:100%; text-align:center; vertical-align:middle; line-height:23px; font-weight:bold}
 .clearlooks2 .mceFocus .mceTop .mceLeft {background-color:#2bcbff; border-radius:5px 0 0 0;}
 .clearlooks2 .mceFocus .mceTop .mceCenter {background-color:#2bcbff;}
 .clearlooks2 .mceFocus .mceTop .mceRight {background-color:#2bcbff; border-radius:0 5px 0 0;}
-.clearlooks2 .mceFocus .mceTop span {color:#FFF}
+*/
 
 /* Middle */
-.clearlooks2 .mceMiddle, .clearlooks2 .mceMiddle div {top:0}
-.clearlooks2 .mceMiddle {width:100%; height:100%; clip:rect(23px auto auto auto)}
-.clearlooks2 .mceMiddle .mceLeft {left:0; width:5px; height:100%; background-color: #f0f0f0; border-radius:5px; border-left: 1px solid #2bcbff;}
+.clearlooks2 .mceMiddle, .clearlooks2 .mceMiddle div {top:40px}
+.clearlooks2 .mceMiddle {width:100%; height:100%; clip:rect(23px auto auto auto); margin: 0 auto; padding-top:20px;}
+/*.clearlooks2 .mceMiddle .mceLeft {left:0; width:5px; height:100%; background-color: #f0f0f0; border-radius:5px; border-left: 1px solid #2bcbff;}
 .clearlooks2 .mceMiddle span {top:23px; left:5px; width:100%; height:100%; border-bottom: 1px solid #2bcbff; background:#FFF}
-.clearlooks2 .mceMiddle .mceRight {right:0; width:5px; height:100%; background-color: #f0f0f0; border-radius:5px; border-right: 1px solid #2bcbff;}
+.clearlooks2 .mceMiddle .mceRight {right:0; width:5px; height:100%; background-color: #f0f0f0; border-radius:5px; border-right: 1px solid #2bcbff;}*/
 
 /* Bottom */
-.clearlooks2 .mceBottom, .clearlooks2 .mceBottom div {height:6px; margin: 0; padding:0;}
+/*.clearlooks2 .mceBottom, .clearlooks2 .mceBottom div {height:6px; margin: 0; padding:0;}
 .clearlooks2 .mceBottom {left:0; bottom:0; width:100%}
 .clearlooks2 .mceBottom div {top:0}
 .clearlooks2 .mceBottom .mceLeft {left:0; width:5px; background-color: #f0f0f0; border-bottom:1px solid #2bcbff; border-radius:0 0 0 5px;}
@@ -40,28 +43,28 @@
 .clearlooks2 .mceStatusbar .mceBottom .mceLeft {background:url(img/corners.gif) -29px 0}
 .clearlooks2 .mceStatusbar .mceBottom .mceCenter {background:url(img/horizontal.gif) 0 -52px}
 .clearlooks2 .mceStatusbar .mceBottom .mceRight {background:url(img/corners.gif) -24px 0}
-.clearlooks2 .mceStatusbar .mceBottom span {display:block; left:7px; font-family:Arial, Verdana; font-size:11px; line-height:23px}
+.clearlooks2 .mceStatusbar .mceBottom span {display:block; left:7px; font-family:Arial, Verdana; font-size:11px; line-height:23px}*/
 
 /* Actions */
 .clearlooks2 a {width:29px; height:16px; top:3px;}
-.clearlooks2 .mceClose {right:6px; background:url(img/buttons.gif) -87px 0}
+.clearlooks2 .mceClose {right:20px; top:30px; background:url(img/close.png) no-repeat; width: 10px; }
 .clearlooks2 .mceMin {display:none; right:68px; background:url(img/buttons.gif) 0 0}
 .clearlooks2 .mceMed {display:none; right:37px; background:url(img/buttons.gif) -29px 0}
 .clearlooks2 .mceMax {display:none; right:37px; background:url(img/buttons.gif) -58px 0}
 .clearlooks2 .mceMove {display:none;width:100%;cursor:move;background:url(img/corners.gif) no-repeat -100px -100px}
 .clearlooks2 .mceMovable .mceMove {display:block}
-.clearlooks2 .mceFocus .mceClose {right:6px; background:url(img/buttons.gif) -87px -16px}
+.clearlooks2 .mceFocus .mceClose {right:20px; top:30px; background:url(img/close.png)  no-repeat; width:10px;}
 .clearlooks2 .mceFocus .mceMin {right:68px; background:url(img/buttons.gif) 0 -16px}
 .clearlooks2 .mceFocus .mceMed {right:37px; background:url(img/buttons.gif) -29px -16px}
 .clearlooks2 .mceFocus .mceMax {right:37px; background:url(img/buttons.gif) -58px -16px}
-.clearlooks2 .mceFocus .mceClose:hover {right:6px; background:url(img/buttons.gif) -87px -32px}
-.clearlooks2 .mceFocus .mceClose:hover {right:6px; background:url(img/buttons.gif) -87px -32px}
+.clearlooks2 .mceFocus .mceClose:hover {right:20px; top:30px; background:url(img/close.png) -12px 0 no-repeat; width:10px;}
+.clearlooks2 .mceFocus .mceClose:hover {right:20px; top:30px; background:url(img/close.png) -12px 0 no-repeat; width:10px;}
 .clearlooks2 .mceFocus .mceMin:hover {right:68px; background:url(img/buttons.gif) 0 -32px}
 .clearlooks2 .mceFocus .mceMed:hover {right:37px; background:url(img/buttons.gif) -29px -32px}
 .clearlooks2 .mceFocus .mceMax:hover {right:37px; background:url(img/buttons.gif) -58px -32px}
 
 /* Resize */
-.clearlooks2 .mceResize {top:auto; left:auto; display:none; width:1px; height:1px; background-color: #2bcbff; border-radius:5px;}
+.clearlooks2 .mceResize {top:auto; left:auto; display:none; width:1px; height:1px; background-color: #888; border-radius:5px;}
 .clearlooks2 .mceResizable .mceResize {display:block}
 .clearlooks2 .mceResizable .mceMin, .clearlooks2 .mceMax {display:none}
 .clearlooks2 .mceMinimizable .mceMin {display:block}
@@ -82,7 +85,7 @@
 .clearlooks2 .mceMiddle .mceIcon {left:15px; top:35px; width:32px; height:32px}
 .clearlooks2 .mceAlert .mceMiddle span, .clearlooks2 .mceConfirm .mceMiddle span {background:transparent;left:60px; top:35px; width:320px; height:50px; font-weight:bold; overflow:auto; white-space:normal}
 .clearlooks2 a:hover {font-weight:bold;}
-.clearlooks2 .mceAlert .mceMiddle, .clearlooks2 .mceConfirm .mceMiddle {background:#D6D7D5}
+/*.clearlooks2 .mceAlert .mceMiddle, .clearlooks2 .mceConfirm .mceMiddle {background:#D6D7D5}*/
 .clearlooks2 .mceAlert .mceOk {left:50%; top:auto; margin-left: -40px}
 .clearlooks2 .mceAlert .mceIcon {background:url(img/alert.gif)}
 .clearlooks2 .mceConfirm .mceOk {left:50%; top:auto; margin-left: -90px}
