--- a/app/webroot/js/tiny_mce/plugins/advlink/css/advlink.css
+++ b/app/webroot/js/tiny_mce/plugins/advlink/css/advlink.css
@@ -1,3 +1,6 @@
+html,body,div,span,object,iframe,h1,blockquote.big-bold,h2,h3,dl dt,h4,blockquote.simple,h5,h6,blockquote.simple,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video
+{margin:0;padding:0;border:0;outline:0;vertical-align:baseline;background:transparent; font: normal 13px arial,sans-serif; text-align: justify}
+
 .mceLinkList, .mceAnchorList, #targetlist {width:280px;}
 .mceActionPanel {margin-top:7px;}
 .panel_wrapper div.current {height:320px;}
@@ -6,3 +9,6 @@
 #popupwidth, #popupheight, #popupleft, #popuptop {width:30px;vertical-align:middle;text-align:center;}
 #id, #style, #classes, #target, #dir, #hreflang, #lang, #charset, #type, #rel, #rev, #tabindex, #accesskey {width:200px;}
 #events_panel input {width:200px;}
+
+#advlink{padding: 20px;}
+label {margin: 10px 0 5px 0;display: block; text-align: left;}
